--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="Keva"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/ic_keva"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_keva"
         android:supportsRtl="true"
         android:theme="@style/Theme.Keva">
 
